@@ -32,6 +32,8 @@ Write is done for each player whenever the state changes, to ensure data integri
 #include <sproto.h>
 #endif
 
+#include "output_file.h"
+
 /** Quest status that indicates a quest was completed and may be restarted. */
 #define QC_CAN_RESTART -1
 
@@ -554,15 +556,14 @@ static void quest_read_player_data(quest_player *pq) {
  */
 static void quest_write_player_data(const quest_player *pq) {
     FILE *file;
-    char write[MAX_BUF], final[MAX_BUF];
+    OutputFile of;
+    char fname[MAX_BUF];
     const quest_state *state;
 
-    snprintf(final, sizeof(final), "%s/%s/%s/%s.quest", settings.localdir, settings.playerdir, pq->player_name, pq->player_name);
-    snprintf(write, sizeof(write), "%s.new", final);
+    snprintf(fname, sizeof(fname), "%s/%s/%s/%s.quest", settings.localdir, settings.playerdir, pq->player_name, pq->player_name);
 
-    file = fopen(write, "w+");
-    if (!file) {
-        LOG(llevError, "quest: couldn't open player quest file %s!", write);
+    file = of_open(&of, fname);
+    if (file == NULL) {
         draw_ext_info(NDI_UNIQUE | NDI_ALL_DMS, 0, NULL, MSG_TYPE_ADMIN, MSG_TYPE_ADMIN_LOADSAVE, "File write error on server!");
         return;
     }
@@ -577,10 +578,11 @@ static void quest_write_player_data(const quest_player *pq) {
         state = state->next;
     }
 
-    fclose(file);
+    if (!of_close(&of)) {
+        draw_ext_info(NDI_UNIQUE | NDI_ALL_DMS, 0, NULL, MSG_TYPE_ADMIN, MSG_TYPE_ADMIN_LOADSAVE, "File write error on server!");
+        return;
+    }
     /** @todo rename/backup, stuff like that */
-    unlink(final);
-    rename(write, final);
 }
 
 /**
